# sparkspawn

./: .gitignore  AGENTS.md  Dockerfile  README-package.md  README.md  TODO.md  attractor-implementation-checklist.md  attractor-spec.md  audit-ui-completed-items.sh  compose.yaml  durable-request-user-input-answer-delivery-plan.md  dynamic-status-envelope-messaging.md  index.css  index.html  justfile  move-workspace-and-chat.md  pyproject.toml  remote-project-picker.md  reviewable-proposed-plan-artifacts-plan.md  run-attractor-loop.sh  run-spark-loop.sh  run-sparkspawn-loop.sh  server.py  ui-advanced-feature-access.md  ui-frontend-test-migration-plan.md  ui-gaps.md  ui-implementation-checklist.md  ui-parity-complete-user-journey.md  ui-parity-risk-report.md  ui-raw-dot-required-config.md  ui-spec-first-behavior-map.md  ui-spec.md  ui-user-stories.md
.github/workflows/: ci.yml
.interface-design/: system.md
attractor/: __init__.py  cli.py  config.py  parity_matrix.py  prompt_templates.py  storage.py
attractor/api/: project_chat.py  server.py  workspace_api.py
attractor/dsl/: __init__.py  dot_lint.py  models.py  parser.py  validator.py
attractor/engine/: __init__.py  artifacts.py  conditions.py  context.py  executor.py  routing.py
attractor/handlers/: base.py  defaults.py  runner.py
attractor/interviewer/: __init__.py  implementations.py  models.py
attractor/transforms/: __init__.py  defaults.py  merge.py  pipeline.py  runtime_preamble.py  stylesheet.py
changes/CR-2026-0001-first-class-child-runs-and-same-run-retry/: request.md  result.md
changes/CR-2026-0002-project-chat-model-and-reasoning-effort-controls/: request.md  (+1 more)
docs/: first-flow-tutorial.md
flows/: demo.dot  implement-spec.dot  reference-1.1-01.dot  reference-1.1-03-extension-attrs.dot  reference-1.1-03-graph-attrs.dot  reference-1.1-03-manager-and-human.dot  test.dot
frontend/: ARCHITECTURE.md  README.md  components.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: build_deliverable.py  sync_ui_dist.sh
specs/: README.md  attractor-spec.md  conversation-event-contract.md  conversation-paradigm.md  conversation-state-model.md  project-workspace-model-notes.md  spark-flow-extensions.md  spark-ui-ux.md  spark-workspace.md  sparkspawn-attractor-extensions.md  sparkspawn-flow-extensions.md  sparkspawn-frontend.md  sparkspawn-ui-ux.md  sparkspawn-workspace.md  storage-boundaries.md  ui-role-persona-scenarios.md  ui-runtime-parser-boundaries.md  ui-spec-first-behavior-map.md  ui-spec.md  ui-story-records.md  ui-user-stories.md
starter-flows/: human-review-loop.dot  implement-review-loop.dot  implement-spec.dot  implementation-worker.dot  simple-linear.dot
tests/: README.md  conftest.py  test_adapter_contract.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_generate.py  test_middleware.py  test_models.py  test_provider_utils.py  test_retry.py  test_sse.py  test_stream_high_level.py  test_streaming.py  test_structured.py  test_tool_loop.py  test_tools.py  test_types.py
(+723 files in other folders)
