[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "httpx>=0.27,<1.0",
    "platformdirs>=4.0",
    "pydantic>=2.7,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
spark = "spark.cli:main"
spark-workspace = "workspace.cli:main"
spark-ui-release-gate = "spark_app.ui_release_gate:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["attractor*", "workspace*", "spark*", "spark_app*", "spark_common*"]

[tool.setuptools.package-data]
spark = ["starter_flows/*.dot", "guides/*.md"]
spark_app = ["ui_dist/**"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
